# feng

./: CMakeLists.txt  bezier_sim.py  center.pkl  first.cpp  gradient_descent.py  label.pkl  label_faces.pkl  load_obj.py  normal.pkl  normal_exact.py  pc_cluster.cpp  pcl_test.cpp  show_cluster.cpp  visual_demo.py
cluster/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+10 more)
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/building_model/: basic_shapes  test_read
devel/lib/pkgconfig/: building_model.pc
devel/share/building_model/cmake/: building_modelConfig.cmake
kmeans/: CMakeLists.txt  center_normal.cpp  condition_ec.cpp  dual_sampling.cpp  global.txt  head.h  kmeans.cpp  knn_4_normal.cpp  pc_vis.cpp  prepare_tsp.cpp
normal/: norm.txt
src/: cmd.txt
src/building_model/: CMakeLists.txt  package.xml
src/building_model/config/: dis.rviz
src/building_model/include/: basic_shapes.h  test_read.h
src/building_model/launch/: display.launch  shape.launch
src/building_model/meshes/: Farm_house.dae
src/building_model/src/: basic_shapes.cpp  test_read.cpp
src/building_model/urdf/: house.urdf
